spine almost working..

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@pixi-spine/runtime-4.0": "^3.0.13",
         "@zip.js/zip.js": "^2.4.10",
         "lil-gui": "^0.16.1",
+        "pixi-spine": "^3.0.13",
         "pixi.js": "^6.0.0-X"
     },
     "devDependencies": {
